@@ -21,6 +21,9 @@ Bug fixes
   doctest. This needed a bugfix in Martian (since 0.9.2). Add a test
   that demonstrates this problem.
 
+* Fix https://bugs.launchpad.net/grok/+bug/162437: grok.Form and its
+  subclasses did not implement IBrowserView.
+
 0.11 (2007-11-08)
 =================
 
